--- a/futuregreen/templates/base.html
+++ b/futuregreen/templates/base.html
@@ -45,9 +45,10 @@ design.">
     {% block js_head %}
     <!-- All JavaScript at the bottom, except for Modernizr / Respond. -->
     <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.0.6/modernizr.min.js"></script>
-    <script type="text/javascript" src="http://use.typekit.com/uyl4qjv.js"></script>
-    <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
-    {% endblock js_head %}
+<script type="text/javascript" 
+src="//use.typekit.net/txg3vuy.js"></script>
+<script type="text/javascript">try{Typekit.load();}catch(e){}</script>    
+{% endblock js_head %}
 
     {% block extra_head %}
     {% endblock extra_head %}
