--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -1,107 +1,127 @@
 {% extends "base.html" %}
-{% load generic_flatblocks %}
-{% block body_class %}home{% endblock body_class%}
+{% block body_class %}home{% endblock body_class %}
 {% block content %}
-<div class="two-thirds">
-    <div class="full">
-        {% for project in project_list|slice:"1:5" %}
-        <article class="project list box quarter" id="{{ project.slug }}">
-            <header><a href="{{ project.get_absolute_url }}"><h1>{{ project.name }}</h1></a></header>
-            {% for image in project.projectimage_set.all %}
-            {% if image.is_main %}
-                <a href="{{ project.get_absolute_url }}">
-                    <img alt="{{ project.title }}" src="{{ image.list.url }}" /></a>
-            {% endif %}
-            {%  endfor %}
-        </article>
-        {% endfor %}
-    </div>
-    <div class="full">
-        {% for project in project_list|slice:"5:6" %}
-        <article class="project list box quarter" id="{{ project.slug }}">
-            <header><a href="{{ project.get_absolute_url }}"><h1>{{ project.name }}</h1></a></header>
-            {% for image in project.projectimage_set.all %}
-            {% if image.is_main %}
-                <a href="{{ project.get_absolute_url }}">
-                    <img alt="{{ project.title }}" src="{{ image.list.url }}" /></a>
-            {% endif %}
-            {%  endfor %}
-        </article>
-        {% endfor %}
-        <article class="text box three-quarters" id="profile">
-            <a class="wraplink" href="{% url studio %}">
-            <div>
-                {%  gblock "firm_profile" for "content.ContentBlock" with "content/contentblock/excerpt.html" %}
-                <p class="tease">Read More</p>
-            </div>
-            </a>
-        </article>
-    </div>
-    <div class="full">
-        <article class="text box three-quarters update" id="article">
-            <a class="wraplink" href="{{ article.get_absolute_url }}">
-            <div>
-                <h1>Research</h1>
-                <h2>{{ article.title }}</h2>
-                {{ article.excerpt_html|safe|truncatewords_html:30 }}
-                <p class="tease">Read More</p>
-            </div>
-            </a>
-        </article>
-        {% for project in project_list|slice:"6:7" %}
-        <article class="project list box quarter" id="{{ project.slug }}">
-        <header><a href="{{ project.get_absolute_url }}"><h1>{{ project.name }}</h1></a></header>
+        <section class="slideshow">
+            <div class="carousel">
+                <ul class="slides">
+                    <li>
+                        <div class="image">
+                            <a href="{{ news.get_absolute_url }}">
+                            {% for image in news.newsitemimage_set.all %}
+                            {% if image.is_main %}
+                            <img src="{{ image.letterbox.url }}" alt="{{ image.caption }}" />                     
+                            {% endif %}
+                            {% endfor %}
+                            </a>
+                        </div>
+                        <div class="text">
+                            <h2>{{ news.title }}</h2> 
+                            <p>{{ news.excerpt_html|safe }}</p>
+                            <p class="tease"><a href="{{ news.get_absolute_url }}">Read more...</a></p>
+                        </div>
+                     </li>
 
-        {% for image in project.projectimage_set.all %}
-        {% if image.is_main %}
-            <a href="{{ project.get_absolute_url }}">
-                <img alt="{{ project.title }}" src="{{ image.list.url }}" /></a>
-        {% endif %}
-        {%  endfor %}
-        </article>
-        {% endfor %}
-    </div>
-</div>
-<div class="third">
-    <article class="text box full update" id="news">
-        <a class="wraplink" href="{{ news.get_absolute_url }}">
-        <div>
-            <h1>News</h1>
-            <h2>{{ news.title }}</h2>
-            {{ news.excerpt_html|safe|truncatewords_html:20 }}
-            <p class="tease">Read More</p>
-        </div>
-        </a>
-    </article>
-    {% for project in project_list|slice:"7:8" %}
-    <article class="project list box full featured" id="{{ project.slug }}">
-        <header><a href="{{ project.get_absolute_url }}"><h1>{{ project.name }}</h1></a></header>
-        {% for image in project.projectimage_set.all %}
-        {% if image.is_main %}
-            <a href="{{ project.get_absolute_url }}">
-                <img alt="{{ project.title }}" src="{{ image.list.url }}" /></a>
-        {% endif %}
-        {%  endfor %}
+                    {% for project in project_list %}
+                     <li>
+                            <div class="image">
+                            <a href="{{ project.get_absolute_url }}">
+                                {% for image in project.projectimage_set.all %}
+                                {% if image.is_main %}
+                                <img src="{{ image.letterbox.url }}" alt="{{ image.caption }}" />
+                                {% endif %}
+                                {% endfor %}
+                            </a>
+                            </div>
+                            <div class="text">
+                                <h2>{{ project.name }}</h2> 
+                                <p>{{ project.description_html|safe|truncatewords_html:40 }}</p>
+                                <p class="tease"><a href="{{ project.get_absolute_url }}">Read More...</a></p>
+                            </div>
 
-    </article>
-    {% endfor %}
+                     </li>
+                     {% endfor %}
+                     <li>
+                        <div>
+                            <a href="{{ article.get_absolute_url }}">
+                            {% for image in article.articleimage_set.all %}
+                            {% if image.is_main %}
+                            <img src="{{ image.letterbox.url }}" alt="{{ image.caption }}" />                     
+                            {% endif %}
+                            {% endfor %}
+                            </a>
+                        </div>
+                        <div class="text">
+                            <h2>{{ article.title }}</h2> 
+                            <p>{{ article.excerpt_html|safe }}</p>
+                            <p class="tease"><a href="{{ article.get_absolute_url }}">Read 
+more...</a></p>
+                        </div>
+                     </li>
 
-</div>
+                  </ul>
+                </div>
+        </section>
 {% endblock content %}
+
 {% block js_local %}
-    <script type="text/javascript">
-        function Flex() {
-            if ( $(window).width() > 480 ) {
-                var height = $("article.project").width();
-                $("article.text div").css('min-height', height);
-            }
-        }
-        $(document).ready(function() {
-            Flex();
+<script type="text/javascript" src="{{ STATIC_URL }}js/jquery.flexslider.js"></script>
+<script type="text/javascript" src="{{ STATIC_URL }}js/jquery.resize.min.js"></script>
+<script type="text/javascript">
+    function Square() {
+            $('.square').each(function(){
+                width = $(this).width();
+                $(this).css('height',width);
+            });
+            $('.center').each(function(){
+                width = $(this).width();
+                $(this).css('line-height',width + "px");
+            });
+    }
+
+
+
+
+    $(document).ready(function() {
+        Square();
+        $('.carousel').flexslider({
+            animation: "slide",
+            slideshow: true,
+            slideshowSpeed: 5000,
+            animationDuration: 600,
+            directionNav: false,
+            controlNav: false,
+            keyboardNav: true,
+            touchSwipe: true,
+            prevText: "	&#171;",
+            nextText: "	&#187;",
+            pausePlay: false,
+            randomize: false,
+            //slideToStart: 0,
+            animationLoop: true,
+            pauseOnAction: true,
+            pauseOnHover: false,
         });
 
-        $(window).resize(function() {
-            Flex();
+    });
+
+    $(window).resize(function() {
+        Square();
+    });
+
+    $("#open").click(function () {
+        $(".content").addClass('max');
+        $(".slideshow").resize(function() {
+            $.fn.flexslider.reset()
         });
-    </script>
+        $("#open").hide();
+        $("#close").show();
+        $("#close").css('display', 'block');
+    });
+
+    $("#close").click(function () {
+        $(".content").removeClass('max');
+        $("#open").show();
+        $("#close").hide();
+    });
+</script>
 {% endblock js_local %}
