--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -1170,6 +1170,75 @@ ul#project-nav {
     background: rgba(255,255,255,0.8);
 }
 
+.contact-content {
+   position: relative;
+}
+
+/* mailchimp signup form */
+
+#mc_embed_signup {
+    position: absolute;
+    bottom: 40px;
+    left: 20px;
+    width: 33%;
+    padding: 20px;
+}
+
+
+#mc_embed_signup h2 {font-weight: normal; padding:0; margin:15px 0;}
+
+
+#mc_embed_signup input {border:1px solid #ccc; width: 100%, border-radius: 2px;  -webkit-appearance:none;}
+
+#mc_embed_signup input[type=checkbox]{-webkit-appearance:checkbox;}
+
+#mc_embed_signup input[type=radio]{-webkit-appearance:radio;}
+
+#mc_embed_signup input:focus {border-color:#999;}
+
+#mc_embed_signup .button {clear:both; background-color: #4c6684; border: 0 none;  color: #FFFFFF; 
+cursor: pointer; font-size:14px; font-weight: padding:5px 20px; text-align: center; text-decoration: none; 
+vertical-align: top; white-space: nowrap; 
+width: 
+auto;}
+
+#mc_embed_signup .button:hover {background-color:#666;}
+
+#mc_embed_signup .small-meta {font-size: 11px;}
+
+#mc_embed_signup .nowrap {white-space:nowrap;}     
+
+#mc_embed_signup .clear {clear:none; display:inline;}
+
+#mc_embed_signup label {
+   display: inline-block; 
+   font-size: 18px;
+   padding:2px 4px;
+   margin-bottom: 10px; 
+   font-weight: normal;
+   background: rgba(255,255,255,0.8);
+}
+
+#mc_embed_signup input.email {display:block; padding:8px 0; margin:0 4% 10px 0; text-indent:5px; width:100%; 
+min-width:130px; border-radius: 2px}
+
+#mc_embed_signup input.button { padding: 10px 20px; border-radius: 2px }
+
+#mc_embed_signup div#mce-responses {float:left; top:-1.4em; padding:0em .5em 0em .5em; overflow:hidden; 
+width:90%;margin: 0 5%; clear: both;}
+
+#mc_embed_signup div.response {margin:1em 0; padding:1em .5em .5em 0; font-weight:bold; float:left; top:-1.5em; 
+z-index:1; width:80%;}
+
+#mc_embed_signup #mce-error-response {display:none;}
+
+#mc_embed_signup #mce-success-response {color:#529214; display:none;}
+
+#mc_embed_signup label.error {display:block; float:none; width:auto; margin-left:1.05em; text-align:left; padding:.5em 
+0;}
+
+
+
 /******** MEDIA QUERIES **********/
 
 @media screen and (min-width: 1240px) {
@@ -1604,10 +1673,4 @@ ul#project-nav {
     }
 
 }
-
-
-
-
-
-
 
