limited news articles to live

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -1178,19 +1178,20 @@ ul#project-nav {
 
 #mc_embed_signup {
     position: absolute;
-    bottom: 40px;
+    bottom: 30px;
     right: 40px;
-    width: 33%;
-    padding: 20px;
-    background: rgba(255,255,255,0.7);
+    /*width: 25%;*/
 }
 
 
 #mc_embed_signup h2 {font-size: .75em; font-weight: normal; padding:0; margin:15px 0;}
 
 
-#mc_embed_signup input {border:1px solid #ccc; border-radius: 2px;  
--webkit-appearance:none;}
+#mc_embed_signup input {
+    border:1px solid #ccc; 
+    /*border-radius: 2px;*/  
+    -webkit-appearance:none;
+}
 
 #mc_embed_signup input[type=checkbox]{-webkit-appearance:checkbox;}
 
@@ -1200,12 +1201,15 @@ ul#project-nav {
 
 #mc_embed_signup .button {
     display: inline-block; 
-    background-color: #4c6684; 
-    border: 0 none;  color: #FFFFFF; 
-cursor: pointer; font-size:14px; font-weight: padding:5px 20px; text-align: center; text-decoration: none; 
-vertical-align: top; white-space: nowrap; 
-width: 
-auto;}
+    background-color: rgba(255,255,255,0.5);
+    color:#8ec42a;
+    font-weight: bold;
+    border: 0 none;
+    cursor: pointer; 
+    text-align: center; text-decoration: none; 
+    vertical-align: top; white-space: nowrap; 
+    width: auto;
+}
 
 #mc_embed_signup .button:hover {background-color:#666;}
 
@@ -1217,16 +1221,22 @@ auto;}
 
 #mc_embed_signup label {
    display: block; 
-   font-size: 14px;
-   margin-bottom: 10px; 
+   font-size: 12px;
+   margin-bottom: 5px; 
    font-weight: normal;
-   /*background: rgba(255,255,255,0.8);*/
 }
 
-#mc_embed_signup input.email {display: inline-block; padding:8px 0; margin:0; text-indent:5px; 
-width:75%;  border-radius: 2px}
+#mc_embed_signup input.email {
+    display: inline-block; 
+    padding:4px 0; margin:0; 
+    text-indent:5px;   
+    width:200px;  
+}
 
-#mc_embed_signup input.button { font-size: 12px; padding: 8px; border-radius: 2px }
+#mc_embed_signup input.button { 
+   font-size: 12px; 
+   padding: 5px; border-radius: 0px 
+}
 
 #mc_embed_signup div#mce-responses {float:left; top:-1.4em; padding:0em .5em 0em .5em; overflow:hidden; 
 width:90%;margin: 0 5%; clear: both;}
