--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -124,7 +124,7 @@
                     </div>
                     {% endif %}
                 </div>
-                <ul id="project-nav box">
+                <ul id="project-nav">
                 {%  if project.get_next_project %}
                 <li class="box"><h2>Next Project</h2>
                     <a class="next-proj tease"
