--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -42,9 +42,9 @@
         </section>
     {% endif %}
         <section class="details">
-            <header style="margin: 0 10px 5px 10px;">
+            <header>
                 <h1>{{ project.name }}</h1>
-                <h2 style="margin-top:10px">{{ project.address }}</h2>
+                <h2>{{ project.address }}</h2>
             </header>
             <div class="description box">
                 {{ project.description_html|safe }}
