--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -927,11 +927,11 @@ body.studio.news .main{
 }
 
 .details header {
-	margin: 5px 10px;
+	margin: 10px;
 }
 
 .details header h2 {
-	margin-top: 10px;
+	margin-top: 5px;
 }
 
 .details p {
