added client content block

--- a/futuregreen/templates/studio/studio_index.html
+++ b/futuregreen/templates/studio/studio_index.html
@@ -6,6 +6,7 @@
       {%  gblock "firm_profile" for "content.ContentBlock" with "content/contentblock/main.html" %}
     </article>
       {%  gblock "studio_collaborators" for "content.ContentBlock" with "content/contentblock/flatblock.html" %}
+      {%  gblock "studio_clients" for "content.ContentBlock" with "content/contentblock/flatblock.html" %}
 </section>
 <section class="third">
     <header class="box">
