--- a/futuregreen/templates/base.html
+++ b/futuregreen/templates/base.html
@@ -33,13 +33,7 @@ design.">
 
     {% block css %}
     <link rel="stylesheet" href="{{ STATIC_URL }}css/base.css">
-    <!-- Uncomment if you are specifically targeting less enabled mobile browsers
-    <link rel="stylesheet" media="handheld" href="css/handheld.css">
-    <link rel="stylesheet" media="screen and (max-width: 600px)" href="small.css" />
-    <link rel="stylesheet" media="only screen and (-webkit-min-device-pixel-ratio: 2)"
-          type="text/css" href="iphone4.css" />
-    <link rel="stylesheet" media="all and (orientation:portrait)" href="portrait.css">
-    <link rel="stylesheet" media="all and (orientation:landscape)" href="landscape.css">-->
+    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
     {% endblock css %}
 
     {% block js_head %}
