--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -584,6 +584,7 @@ body.book .book-links li {
 }
 
 body.book .book-links .social {
+    display: inline-block;
     background: rgb(142, 196, 42);
     color: white;
     border-radius: 50%;
@@ -593,6 +594,7 @@ body.book .book-links .social {
 }
 
 body.book  .book-links  .purchase {
+    display: inline-block;
     padding: 0 $small-spacing;
     border: 3px solid rgb(142, 196, 42);
     color: rgb(142, 196, 42);;
@@ -601,6 +603,7 @@ body.book  .book-links  .purchase {
     text-transform: uppercase;
     font-size: 1em;
     height: 30px;
+    line-height: 30px;
 }
   
 
