--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -591,11 +591,13 @@ body.book .book-links .social {
     font-size: 1.1em;
     height: 30px;
     width: 30px;
+    text-align: center;
+    line-height: 30px;
 }
 
 body.book  .book-links  .purchase {
     display: inline-block;
-    padding: 0 $small-spacing;
+    padding: 15px 0;
     border: 3px solid rgb(142, 196, 42);
     color: rgb(142, 196, 42);;
     border-radius: 15px;
