--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -578,8 +578,12 @@ body.book .book-content article {
     margin-top: 12px;
 }
 
+body.book .book-links {
+    text-align: center;
+}
+
 body.book .book-links li {
-      padding: $small-spacing/2;
+      padding: 5px;
       display: inline-block;
 }
 
@@ -597,7 +601,7 @@ body.book .book-links .social {
 
 body.book  .book-links  .purchase {
     display: inline-block;
-    padding: 15px 0;
+    padding: 0 15px;
     border: 3px solid rgb(142, 196, 42);
     color: rgb(142, 196, 42);;
     border-radius: 15px;
