--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -183,6 +183,7 @@ body.studio > header > nav li a.studio,
 body.portfolio > header > nav li a.portfolio,
 body.research > header > nav li a.research,
 body.news > header > nav li a.news,
+body.book > header > nav li a.book,
 body.contact > header > nav li a.contact {
      background:url('images/vertical-bg.png') no-repeat 10px top,
                url('images/bottom-bg.png') no-repeat left 10px,
