--- a/futuregreen/templates/base.html
+++ b/futuregreen/templates/base.html
@@ -60,7 +60,7 @@ src="//use.typekit.net/uyl4qjv.js"></script>
                 <li><a class="portfolio" href="{% url portfolio_project_list %}">Portfolio</a></li>
                 <li><a class="research" href="{% url research %}">Research</a></li>
                 <li><a class="news" href="{% url news %}">News</a></li>
-                <li><a class="book" href="{% url news %}">SUP Book</a></li>
+                <li><a class="book" href="{% url publications %}">SUP Book</a></li>
                 <li><a class="contact" href="{% url contact %}">Contact</a></li>
             </ul>
         </nav>
