--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -224,6 +224,30 @@ body > footer > .copyright {
     margin-left:20px;
 }
 
+body > footer .social-links {
+    float: left;
+    margin-top: 12px;
+    text-align: center;
+    margin-left:20px;
+}
+
+body > footer .social-links li {
+    margin: 5px;
+    display: inline-block;
+}
+
+body > footer .social-links li a {
+    display: inline-block;
+    background: rgb(142, 196, 42);
+    color: white;
+    border-radius: 50%;
+    font-size: 1.1em;
+    height: 30px;
+    width: 30px;
+    text-align: center;
+    line-height: 30px;
+}
+
 body > footer > .contact {
     float:right;
     text-align:right;
@@ -1724,34 +1748,21 @@ z-index:1; width:80%;}
         padding-top:10px;
     }
 
+    body > footer > .social-links {
+        display:block;
+        float:none;
+        clear:both;
+        text-align:left;
+        margin:0;
+        padding-top:10px;
+    }
+
     body > footer > .copyright {
         display:block;
         float:none;
         clear:both;
         text-align:left;
         margin:0;
-    }
-
-    body > footer .social-links {
-        margin-top: 12px;
-        text-align: center;
-    }
-
-    body > footer .social-links li {
-        margin: 5px;
-        display: inline-block;
-    }
-
-    body > footer .social-links li a {
-        display: inline-block;
-        background: rgb(142, 196, 42);
-        color: white;
-        border-radius: 50%;
-        font-size: 1.1em;
-        height: 30px;
-        width: 30px;
-        text-align: center;
-        line-height: 30px;
     }
     
 
