--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -226,13 +226,13 @@ body > footer > .copyright {
 
 body > footer .social-links {
     float: left;
-    margin-top: 12px;
+    margin: 0;
     text-align: center;
     margin-left:20px;
 }
 
 body > footer .social-links li {
-    margin: 5px;
+    margin: 0 5px;
     display: inline-block;
 }
 
@@ -241,11 +241,11 @@ body > footer .social-links li a {
     background: rgb(142, 196, 42);
     color: white;
     border-radius: 50%;
-    font-size: 1.1em;
-    height: 30px;
-    width: 30px;
+    font-size: 0.85em;
+    height: 20px;
+    width: 20px;
     text-align: center;
-    line-height: 30px;
+    line-height: 20px;
 }
 
 body > footer > .contact {
