--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -232,10 +232,12 @@ body > footer .social-links {
     margin-left:20px;
 }
 
-
-
-body > footer .social-links a {
+body > footer .social-links li {
     margin: 0 5px;
+    display: inline-block;
+}
+
+body > footer .social-links li a {
     display: inline-block;
     background: rgb(142, 196, 42);
     color: white;
