revised link names and targets

--- a/futuregreen/templates/base.html
+++ b/futuregreen/templates/base.html
@@ -60,7 +60,7 @@ src="//use.typekit.net/uyl4qjv.js"></script>
                 <li><a class="portfolio" href="{% url portfolio_project_list %}">Portfolio</a></li>
                 <li><a class="research" href="{% url research %}">Research</a></li>
                 <li><a class="news" href="{% url news %}">News</a></li>
-                <li><a class="book" href="{% url publications %}">SUP Book</a></li>
+                <li><a class="book" href="{% url publications %}">Book</a></li>
                 <li><a class="contact" href="{% url contact %}">Contact</a></li>
             </ul>
         </nav>
@@ -77,9 +77,9 @@ src="//use.typekit.net/uyl4qjv.js"></script>
         {% load generic_flatblocks %}
         <span class="copyright">&copy; {% now "Y" %} Future Green Studio Corp.</span>
         <ul class="social-links">
-            <li><a href="https://www.facebook.com/Future-Green-Studio-189508231078006"><i class="fa fa-facebook"></i></a></li>
-            <li><a href="https://twitter.com/future_green"><i class="fa fa-twitter"></i></a></li>
-            <li><a href="https://www.instagram.com/futuregreenstudio/"><i class="fa fa-instagram"></i></a></li>
+            <li><a target="_blank" href="https://www.facebook.com/Future-Green-Studio-189508231078006"><i class="fa fa-facebook"></i></a></li>
+            <li><a target="_blank" href="https://twitter.com/future_green"><i class="fa fa-twitter"></i></a></li>
+            <li><a target="_blank" href="https://www.instagram.com/futuregreenstudio/"><i class="fa fa-instagram"></i></a></li>
         </ul>
         <span class="contact">{%  gblock "footer_contact" for "content.ContentBlock" with "content/contentblock/simple.html" %}</span>
     </footer>
