edited link targets

--- a/futuregreen/templates/book.html
+++ b/futuregreen/templates/book.html
@@ -6,10 +6,10 @@
         <img src="{{ book.image.url }}" />
     {% endif %}
     <ul class="book-links">
-        <li><a class="social" href="{{ book.facebook_link }}"><i class="fa fa-facebook"></i></a></li>
-        <li><a class="social" href="{{ book.twitter_link }}"><i class="fa fa-twitter"></i></a></li>
-        <li><a class="social" href="{{ book.instagram_link }}"><i class="fa fa-instagram"></i></a></li>
-        <li><a class="purchase" href="{{ book.purchase_link }}"><span>Purchase</span></a></li>
+        <li><a target="_blank" class="social" href="{{ book.facebook_link }}"><i class="fa fa-facebook"></i></a></li>
+        <li><a target="_blank" class="social" href="{{ book.twitter_link }}"><i class="fa fa-twitter"></i></a></li>
+        <li><a target="_blank" class="social" href="{{ book.instagram_link }}"><i class="fa fa-instagram"></i></a></li>
+        <li><a target="_blank" class="purchase" href="{{ book.purchase_link }}"><span>Purchase</span></a></li>
     </ul>
 </section>
 <section class="book-content box half">
